--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.0
 colorama==0.4.6
 decorator==5.1.1
 Django==4.2.7
+django-filter==23.4
 djangorestframework==3.14.0
 executing==1.2.0
 idna==3.4
