--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 asttokens==2.4.0
+attrs==23.1.0
 backcall==0.2.0
 cachetools==5.3.1
 certifi==2023.7.22
@@ -9,11 +10,15 @@ decorator==5.1.1
 Django==4.2.7
 django-filter==23.4
 djangorestframework==3.14.0
+drf-spectacular==0.27.0
 executing==1.2.0
 idna==3.4
+inflection==0.5.1
 ipdb==0.13.13
 ipython==8.15.0
 jedi==0.19.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
 matplotlib-inline==0.1.6
 oauthlib==3.2.2
 parso==0.8.3
@@ -27,6 +32,9 @@ pyasn1==0.5.0
 Pygments==2.16.1
 pyparsing==3.1.1
 pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.0
+rpds-py==0.15.2
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
