--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-filter==23.4
 djangorestframework==3.14.0
 drf-spectacular==0.27.0
 executing==1.2.0
+Faker==22.0.0
 idna==3.4
 inflection==0.5.1
 ipdb==0.13.13
@@ -26,11 +27,14 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.39
 protobuf==4.24.4
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 Pygments==2.16.1
 pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.0
