fix: adjusting environment variable names for postgres

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=your_secret_key
-PG_NAME=db_name
-PG_USER=user_name
-PG_PASS=your_password
-PG_HOST=localhost
+POSTGRES_DB=db_name
+POSTGRES_USER=user_name
+POSTGRES_PASSWORD=your_password
+POSTGRES_HOST=localhost
